# DBow

./: CMakeLists.txt  README.md
include/: BinaryFile.h  BowVector.h  DException.h  DUtils.h  Database.h  DbInfo.h  FileFunctions.h  HVocParams.h  HVocabulary.h  LineFile.h  QueryResults.h  Timestamp.h  VocInfo.h  VocParams.h  Vocabulary.h  dirent_win.h
sample/: dbow_test.cpp
src/: BinaryFile.cpp  FileFunctions.cpp  HVocabulary.cpp  LineFile.cpp  QueryResults.cpp  Random.cpp  Timestamp.cpp  VocParams.cpp  Vocabulary.cpp
